[package]
name = "weekend-reservaiton-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.13", features = ["macros", "runtime-tokio-native-tls", "sqlx-postgres"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
